Criação do endpoint buscarRestaurantesPorNome

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 
 # Configuracao do servidor
 server.port=8081
+
+# Exibição das stacktraces
+server.error.include-stacktrace=always
+logging.level.org.springframework.web=DEBUG
