--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=
 # Configuracao do servidor
 server.port=8081
 
-# Exibição das stacktraces
+# Exibicao das stacktraces
 server.error.include-stacktrace=always
 logging.level.org.springframework.web=DEBUG
