commit gerenciar restaurante e cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 #Configuracao do JPA + DATASOURCE H2
 spring.h2.console.enabled=true
+spring.jpa.open-in-view=false   
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
 # Configuracao do servidor
 server.port=8081
-
-# Exibição das stacktraces
-server.error.include-stacktrace=always
-logging.level.org.springframework.web=DEBUG
