--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Projeto para Fase 3 da pós tech FIAP</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -61,8 +63,9 @@
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<artifactId>lombok-maven-plugin</artifactId>
+			<version>1.18.20.0</version>
+			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
