--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,16 +1,18 @@
+# Estágio de build
 FROM ubuntu:latest AS build
 
-RUN apt-get update
-RUN apt-get install openjdk-17-jdk -y
+RUN apt-get update && apt-get install -y openjdk-17-jdk
+WORKDIR /app
 COPY . .
 
-RUN apt-get install manven -y
+RUN apt-get install -y maven
 RUN mvn clean install
 
+# Estágio de produção
 FROM openjdk:17-jdk-slim
 
 EXPOSE 8081
 
-COPY --from=build /target/gerenciadorDeReservas-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/gerenciadorDeReservas-0.0.1-SNAPSHOT.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
