--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ server.port=8081
 server.error.include-stacktrace=always
 logging.level.org.springframework.web=DEBUG
 
+#Acesso Jacoco
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/test-reports/
+
