--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ server.error.include-stacktrace=always
 logging.level.org.springframework.web=DEBUG
 
 #Acesso Jacoco
-spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/test-reports/
+spring.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/META-INF/resources/,classpath:/resources/,file:/app/src/main/resources/static/test-reports/jacoco/
 
