--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -7,8 +7,9 @@ COPY . /app
 
 WORKDIR /app/gerenciador-reservas-restaurante
 RUN mvn clean test
-#RUN mkdir -p /app/src/main/resources/static/test-reports
-#RUN mv /app/gerenciador-reservas-restaurante/target/site/jacoco/* /app/src/main/resources/static/test-reports/
+RUN mkdir -p /app/src/main/resources/static/test-reports/jacoco
+RUN cp -r /app/gerenciador-reservas-restaurante/target/site/jacoco/* /app/src/main/resources/static/test-reports/jacoco/
+
 RUN mvn package
 
 RUN cp target/*.jar /app/
